# cocktail-robot

./: .env.sample  .gitignore  README.md  docker-compose.cpu.yml  docker-compose.gpu.yml
firmware/esp/: .gitignore  README.md  ctrl_protocol.md  platformio.ini
firmware/esp/include/: ModuleSettings.hpp  Modules.hpp  Setup.hpp
firmware/esp/include/Modules/: AudioStreams.hpp  Control.hpp  FS.hpp  I2C.hpp  Mic.hpp  Scale.hpp  Screen.hpp  Serial.hpp  Speaker.hpp  WiFi.hpp
firmware/esp/include/Setup/: FS.hpp  I2C.hpp  Mic.hpp  Scale.hpp  Serial.hpp  Setup.hpp  Speaker.hpp  WiFi.hpp
firmware/esp/lib/LCD_1inch3/: DEV_Config.cpp  DEV_Config.h  GUI_Paint.cpp  GUI_Paint.h  fonts.h  image.h
firmware/esp/lib/avr-libc-2.2.1/: Makefile.in  avr-libc.spec  config.h.in  configure  devices.m4  devlist.m4  files.m4  multilib.m4
firmware/esp/lib/avr-libc-2.2.1/avr/: Makefile.am  Makefile.in
firmware/esp/lib/avr-libc-2.2.1/avr/devices/: Makefile.am  Makefile.in
firmware/esp/lib/avr-libc-2.2.1/avr/devices/at43usb320/: Makefile.am  Makefile.in
firmware/esp/lib/avr-libc-2.2.1/avr/devices/at94k/: Makefile.am  (+1 more)
firmware/esp/lib/avr-libc-2.2.1/avr/lib/: Makefile.am  Makefile.in
firmware/esp/lib/avr-libc-2.2.1/crt1/: Makefile.in
firmware/esp/lib/avr-libc-2.2.1/crt1/iosym/: Makefile.in
firmware/esp/lib/avr-libc-2.2.1/doc/: Makefile.in
firmware/esp/lib/avr-libc-2.2.1/doc/api/: Makefile.in
firmware/esp/lib/avr-libc-2.2.1/doc/examples/: Makefile.in
firmware/esp/lib/avr-libc-2.2.1/include/: Makefile.in
firmware/esp/lib/avr-libc-2.2.1/include/compat/: Makefile.in
firmware/esp/lib/avr-libc-2.2.1/include/sys/: Makefile.in
firmware/esp/lib/avr-libc-2.2.1/include/util/: Makefile.in
firmware/esp/lib/avr-libc-2.2.1/libc/: Makefile.in
firmware/esp/lib/avr-libc-2.2.1/libc/misc/: Makefile.in
firmware/esp/lib/avr-libc-2.2.1/libc/pmstring/: Makefile.in
firmware/esp/lib/avr-libc-2.2.1/libc/stdio/: Makefile.in
firmware/esp/lib/avr-libc-2.2.1/libc/stdlib/: Makefile.in
firmware/esp/lib/avr-libc-2.2.1/libc/string/: Makefile.in
firmware/esp/lib/avr-libc-2.2.1/libc/time/: Makefile.in
firmware/esp/lib/avr-libc-2.2.1/libm/: Makefile.in
firmware/esp/lib/avr-libc-2.2.1/libm/fplib/: Makefile.in
firmware/esp/src/: Setup.cpp  main.cpp
media/: display_loop.webm
services/connector/: .gitignore  Dockerfile  README.md  llm.py  main.py  mixing_mode.py  pyproject.toml  requirements.txt  trial_json.txt
services/connector/lib/: StreamNodes.py
services/connector/resources/llm/MIXING/: system_prompt.md  tools.json
services/connector/resources/llm/RECIPE_SEARCH/: system_prompt.md  tools.json
services/connector/src/: a.py  controlnode.py  llm.py  main.py  mixing_class.py  mixing_mode.py  mixmode.py  streamnode.py
services/connector/src/connector/: config.py  llm.py  mixmode_types.py  state.py
services/connector/src/connector/nodes/: base.py  controlnode.py  gainnode.py  llmnode.py  streamnode.py
services/connector/tests/: test_rezept_validator.py  test_validation.py
services/stt/: .dockerignore  .gitignore  Dockerfile  README.md  pvporcupine.py  pyproject.toml  run.sh  run_server.py  test_client.py
services/stt/ffmpeg5.1.6/include/libavutil/: ffversion.h
services/stt/ffmpeg5.1.6/lib/: libavutil.so.57.28.100  libpostproc.so.56.6.100  libswresample.so.4.7.100  libswscale.so.6.7.100
services/stt/ffmpeg6.1.2/include/libavutil/: ffversion.h
services/stt/ffmpeg6.1.2/lib/: libpostproc.so.57.3.100  libswresample.so.4.12.100  libswscale.so.7.5.100
services/tts/: .dockerignore  .gitignore  .python-version  CoquiModels.md  Dockerfile  README.md  pyproject.toml  run.sh  run_server.py  test_client.py
(+892 files in other folders)
