[project]
name = "connector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.84.0",
    "numpy>=2.2.6",
    "pydantic>=2.11.7",
    "sounddevice>=0.5.2"
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.11.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
