[project]
name = "stt-server"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "asyncio>=3.4.3",
    "realtimestt>=0.3.104",
    "ruff>=0.12.0",
]

[project.optional-dependencies]
cpu = [
  "torch==2.5.1",
  "torchaudio==2.5.1",
]
gpu = [
  "torch==2.5.1",
  "torchaudio==2.5.1",
]

[[tool.uv.index]]
name     = "pytorch-cpu"
url      = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name     = "pytorch-cu129"
url      = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = [
  { index  = "pytorch-cpu",    marker = "extra == 'cpu'" },
  { index  = "pytorch-cu129",  marker = "extra == 'gpu' and extra != 'cpu'" },
]
torchaudio = [
  { index  = "pytorch-cpu",    marker = "extra == 'cpu'" },
  { index  = "pytorch-cu129",  marker = "extra == 'gpu' and extra != 'cpu'" },
]