[project]
name            = "tts-server"
version         = "0.1.0"
readme = "README.md"
requires-python = ">=3.11, <3.13"

dependencies = [
  "transformers<=4.47.0",
]

[project.optional-dependencies]
cpu = [
  "torch==2.5.1",
  "torchaudio==2.5.1",
  "realtimetts[azure]>=0.5.5",
]
gpu = [
  "torch==2.5.1",
  "torchaudio==2.5.1",
  "realtimetts[coqui]>=0.5.5",
  "deepspeed>=0.17.1",
]

[[tool.uv.index]]
name     = "pytorch-cpu"
url      = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name     = "pytorch-cu129"
url      = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = [
  { index  = "pytorch-cpu",    marker = "extra == 'cpu'" },
  { index  = "pytorch-cu129",  marker = "extra == 'gpu' and extra != 'cpu'" },
]
torchaudio = [
  { index  = "pytorch-cpu",    marker = "extra == 'cpu'" },
  { index  = "pytorch-cu129",  marker = "extra == 'gpu' and extra != 'cpu'" },
]
